src/main/java/com/example/currency/error/ResourceNotFoundException.java
package com.example.currency.error;

public class ResourceNotFoundException extends RuntimeException {
    public ResourceNotFoundException(String message) {
        super(message);
    }
}
